Register process Done
