# routes/api.php
@@ -20,6 +20,7 @@ Route::post('/send-otp', [ForgotPasswordController::class, 'sendOtp']);
 Route::post('/verify-otp', [ForgotPasswordController::class, 'verifyOtp']);
 Route::post('/password-reset', [ForgotPasswordController::class, 'resetPassword']);
 Route::post('/register', [AuthController::class, 'register'])->name('api.register');
+Route::post('/register/verify-otp', [AuthController::class, 'verifyRegisterOtp'])->name('api.register.verify-otp');
 
 
 Route::middleware('auth:api')->group(function () {
